semantics/snapshots/better_api_semantics__path__test__empty_path.snap
---
source: semantics/path.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "missing leading `/` in path",
        labels: [
            Label {
                style: Primary,
                message: "missing leading `/` in path",
                span: Span {
                    start: 0,
                    end: 2,
                },
            },
        ],
        note: Some(
            "help: path has to be absolute and start with a `/`",
        ),
    },
]
