semantics/snapshots/better_api_semantics__path__test__invalid_parameter_position_start.snap
---
source: semantics/path.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "invalid partial path parameter",
        labels: [
            Label {
                style: Primary,
                message: "invalid partial path parameter",
                span: Span {
                    start: 5,
                    end: 12,
                },
            },
        ],
        note: Some(
            "help: path parameter has to take up a whole path segment, not just a part of it.\n      That is `/{param}` is valid and `/pre{param}after` is not",
        ),
    },
]
