semantics/snapshots/better_api_semantics__path__test__invalid_trailing_slash.snap
---
source: semantics/path.rs
expression: diagnostics
---
[
    Report {
        severity: Warning,
        title: "unnecessary trailing `/` in path",
        labels: [
            Label {
                style: Primary,
                message: "unnecessary trailing `/` in path",
                span: Span {
                    start: 0,
                    end: 11,
                },
            },
        ],
        note: Some(
            "help: trailing `/` is unnecessary and is ignored",
        ),
    },
]
