semantics/snapshots/better_api_semantics__path__test__invalid_url_escape_incomplete.snap
---
source: semantics/path.rs
expression: diagnostics
---
[
    Report {
        severity: Error,
        title: "path contains invalid escape sequences",
        labels: [
            Label {
                style: Primary,
                message: "path contains invalid escape sequences",
                span: Span {
                    start: 0,
                    end: 9,
                },
            },
        ],
        note: Some(
            "help: valid escape sequence in path is `% HEXDIG HEXDIG` where `HEXDIG` is hexadecimal digit.",
        ),
    },
]
